# Reader

./: .gitignore  README.md  generate-icon.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/scripts/: prune-old-majors.sh
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  arxiv.rs  lib.rs  main.rs  storage.rs
src/components/: AnnotationsPanel.test.ts  AnnotationsPanel.tsx  ArxivSearch.tsx  Board.tsx  ChatPanel.tsx  Discover.tsx  GraphCanvas.tsx  Highlights.tsx  Library.tsx  Logo.tsx  Markdown.tsx  MarkdownDoc.tsx  NoteEditor.tsx  PdfPage.tsx  Presentation.tsx  Reader.tsx  ReadingListMenu.tsx  ReadingLists.tsx  ReferencesPanel.tsx  RelatedCard.tsx  SearchView.tsx  SettingsView.tsx  Sidebar.tsx  SummaryPanel.tsx  Timeline.tsx  TintPicker.tsx  TocPanel.tsx  Workspace.tsx
src/lib/: api.ts  canonical.ts  colors.ts  connections.ts  indexStatus.ts  indexer.ts  metadata.test.ts  metadata.ts  pdf.test.ts  pdf.ts  pdfCache.ts  search.test.ts  search.ts  settings.ts  tints.ts  util.ts  webpage.ts  window.ts
