[package]
name = "reader"
version = "4.0.5"
description = "A local research-paper reader with Claude/Codex integration"
authors = ["you"]
edition = "2021"

[lib]
name = "reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "time"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Faster compiles, not smallest binary. This is a desktop reader, not a
# CPU-bound tool, so full LTO + a single codegen unit cost build minutes for
# runtime gains it never needs. Use "thin" LTO if binary size regresses.
[profile.release]
codegen-units = 16
lto = false
opt-level = "s"
strip = true

# Skip full debuginfo in the dev edit→rebuild loop — keep line tables so
# backtraces still point at source, but cut the slowest part of the compile.
[profile.dev]
debug = "line-tables-only"
